# near_bug_bounty

./: .gitignore  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.history/: package_20230426132050.json  package_20230713091258.json
.history/frontend/: index_20221227212741.html  index_20230115182529.jsx  index_20230312151322.jsx
.history/frontend/Components/: Chat_20230107103433.tsx  Header_20230713082544.tsx
.history/frontend/Pages/: Home_20230112052204.tsx  Home_20230126094650.tsx
contract/: Cargo.toml  deploy.sh
contract/src/: _lib_.rs  asset.rs  bounties.rs  crowd_funded_bounties.rs  ema.rs  legacy.rs  lib.rs  oracle.rs  owner.rs  token_transfer.rs  upgrade.rs  utils.rs
contract/src/bounty/: bounty.rs  mod.rs
contract/src/database/: db.rs
contract/src/user/: user.rs
contract/tests/: integration_test.rs
frontend/: .env  App.css  global.scss  index.css  near-wallet.js  next.config.js  package-lock.json  package.json  postcss.config.js  store.js  tailwind.config.js  tsconfig.json
frontend/.next/: react-loadable-manifest.json  trace
frontend/.next/server/: _error.js  (+2 more)
frontend/Components/: Accordion.tsx  Accordionitem.tsx  Activestream.tsx  CardView.tsx  Chat.tsx  Chathome.tsx  GameCard.tsx  HomeSlider.tsx  Hub.tsx  Matchmaking.tsx  PopularGame.tsx  SearchBox.tsx
frontend/Context/: UserContext.tsx
frontend/Features/: Activeapi.tsx  Data.ts
frontend/Pages/: Dashboard.tsx  Tournament.tsx
frontend/src/: App.tsx  config.js  index.scss  main.tsx  middleware.ts
(+97 files in other folders)
