[package]
name = "contract"
version = "1.0.0"
authors = ["Game_bloc.org"]
edition = "2021"

[lib]
name = "contract"  
crate-type = ["cdylib"]

[dependencies]
near-crypto = "0.12.0" 
near-sdk = "4.0.0"
hex = "0.4.3"
uint = { version = "0.9.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true


[workspace]
member = [] 
